--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,19 @@
+body,
+main {
+  color: var(--primary, #004a91);
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
 .container {
   flex-shrink: 0;
   margin: 0 auto;
   padding-top: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .formStyle {
   width: 1335px;
@@ -33,4 +45,117 @@
 .removeBorder {
   border: none;
   outline: none;
+}
+.formDataStyle {
+  padding: 20px;
+  margin-top: 20px;
+  width: 1334px;
+  /* height: 415px; */
+  flex-shrink: 0;
+  background: rgba(255, 255, 255, 0.5);
+  /* background: red; */
+  box-shadow: 0px 4px 59px 0px rgba(50, 50, 71, 0.06),
+    0px 4px 103px 0px rgba(50, 50, 71, 0.01);
+}
+.formTable {
+  width: 100%;
+  height: 30%;
+  border-collapse: collapse;
+}
+.tdStyle {
+  width: 100px;
+}
+th {
+  text-align: left;
+}
+.checkStyle {
+  background: red;
+}
+.editFormStyle {
+  width: 1089px;
+  height: 337px;
+
+  background: rgba(255, 255, 255, 0.5);
+  box-shadow: 0px 4px 59px 0px rgba(50, 50, 71, 0.06),
+    0px 4px 103px 0px rgba(50, 50, 71, 0.01);
+
+  margin-top: 20px;
+}
+.around {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.search-input {
+  width: 500px;
+  height: 50px;
+  flex-shrink: 0;
+  border: 1px solid #d0d0d0;
+  background: #fff;
+  color: var(--primary, #004a91);
+  font-size: 14px;
+
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%;
+  letter-spacing: 0.175px;
+  padding-left: 10px;
+  margin: 10px;
+}
+.flex {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+
+  flex-direction: column;
+}
+.button-flex {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin-top: 20px;
+  padding: 20px;
+}
+.cancel-style {
+  width: 180px;
+  height: 50px;
+  flex-shrink: 0;
+  border: 1px solid var(--primary, #004a91);
+  background: var(--gray-50, #fff);
+  color: var(--primary, #004a91);
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 140%;
+  letter-spacing: 0.1px;
+}
+.cancel-style:hover {
+  background: var(--primary, #004a91);
+  color: var(--gray-50, #fff);
+}
+.submit-style {
+  width: 180px;
+  height: 50px;
+  flex-shrink: 0;
+  background: var(--primary, #004a91);
+  margin: 5px;
+  color: var(--gray-50, #fff);
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 140%;
+  letter-spacing: 0.1px;
+}
+.submit-style:hover {
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+    0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
+.title-style {
+  color: var(--primary, #004a91);
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  margin: 10px;
+  padding-top: 10px;
 }
